--- a/package.json
+++ b/package.json
@@ -5,6 +5,10 @@
   "scripts": {
     "start": "node server.js"
   },
+  "engines": {
+     "node": ">=4.0.0",
+     "npm": ">=3.0.0"
+   },
   "dependencies": {
     "cheerio": "^0.19.0",
     "compression": "^1.6.1",
