--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
     "start": "node server.js"
   },
   "engines": {
-     "node": ">=4.0.0",
-     "npm": ">=3.0.0"
+     "node": ">=4.0.0"
    },
   "dependencies": {
     "cheerio": "^0.19.0",
