add file listing / export files

--- a/package.json
+++ b/package.json
@@ -9,20 +9,22 @@
     "node": ">=4.0.0"
   },
   "dependencies": {
-    "cheerio": "^0.19.0",
+    "archiver": "^0.21.0",
+    "cheerio": "^0.20.0",
     "compression": "^1.6.1",
     "ejs": "^2.4.1",
     "express": "^4.13.4",
     "feedparser": "^1.1.4",
     "fs-extra": "^0.26.5",
-    "moment": "^2.11.1",
-    "morgan": "^1.6.1",
-    "request": "^2.69.0"
+    "moment": "^2.11.2",
+    "morgan": "^1.7.0",
+    "request": "^2.69.0",
+    "serve-index": "^1.7.3"
   },
   "devDependencies": {
     "dotenv": "^2.0.0",
     "jshint": "^2.9.1",
-    "gulp": "^3.9.0",
+    "gulp": "^3.9.1",
     "gulp-jshint": "^2.0.0",
     "gulp-nodemon": "^2.0.6",
     "jshint-stylish": "^2.1.0"
